Restructure html  file

--- a/packages/cursorless-vscode/resources/installationDependencies.html
+++ b/packages/cursorless-vscode/resources/installationDependencies.html
@@ -24,13 +24,12 @@
         Cursorless requires Talon to function by voice.
         <br />
         You can download Talon from
-        <a href="https://talonvoice.com"> talonvoice.com </a>
+        <a href="https://talonvoice.com">talonvoice.com</a>
       </p>
       <p>
-        <i
-          >If you're using Cursorless by keyboard, you can ignore this
-          message.</i
-        >
+        <i>
+          If you're using Cursorless by keyboard, you can ignore this message.
+        </i>
       </p>
     </div>
 
@@ -59,10 +58,9 @@
         </a>
       </p>
       <p>
-        <i
-          >If you're using Cursorless by keyboard, you can ignore this
-          message.</i
-        >
+        <i>
+          If you're using Cursorless by keyboard, you can ignore this message.
+        </i>
       </p>
     </div>
 
