--- a/packages/cursorless-vscode/resources/installationDependencies.html
+++ b/packages/cursorless-vscode/resources/installationDependencies.html
@@ -38,7 +38,7 @@
       <p>
         Cursorless requires Talon user scripts to function by voice.
         <br />
-        The scripts are available at
+        The installation steps for the scripts are available at
         <a href="https://github.com/cursorless-dev/cursorless-talon">
           github.com/cursorless-dev/cursorless-talon
         </a>
