--- a/packages/cursorless-vscode/resources/installationDependencies.html
+++ b/packages/cursorless-vscode/resources/installationDependencies.html
@@ -39,7 +39,7 @@
         Cursorless requires Talon user scripts to function by voice.
         <br />
         The installation steps for the scripts are available at
-        <a href="https://github.com/cursorless-dev/cursorless-talon">
+        <a href="https://www.cursorless.org/docs/user/installation/#installing-the-talon-side">
           github.com/cursorless-dev/cursorless-talon
         </a>
       </p>
